--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <section class="hero">
     <div class="container">
       <h2>Каменная бумага для современного производства</h2>
-      <p>Прочные, экологичные и влагостойкие изделия из каменной бумаги. Прямая поставка из Китая.</p>
+      <p>Прочные, экологичные и влагостойкие изделия. Прямая поставка из Китая.</p>
+      <img src="images/hero.jpg" alt="Главный баннер" style="width:100%; max-height:400px; object-fit:cover; margin-bottom:1rem;">
       <a href="#contact" class="btn">Запросить прайс</a>
     </div>
   </section>
@@ -33,7 +34,7 @@
   <section id="about" class="section">
     <div class="container">
       <h2>О продукте</h2>
-      <p>Каменная бумага — инновационный материал на основе карбоната кальция. Отличается влагостойкостью, прочностью и экологичностью. Подходит для упаковки, полиграфии, мешков и других изделий.</p>
+      <p>Каменная бумага — инновационный материал на основе карбоната кальция. Отличается влагостойкостью, прочностью и экологичностью.</p>
       <ul>
         <li>Влагостойкость</li>
         <li>Прочность выше, чем у обычной бумаги</li>
@@ -48,14 +49,17 @@
       <h2>Каталог продукции</h2>
       <div class="cards">
         <div class="card">
+          <img src="images/product1.jpg" alt="Мешки" style="width:100%; border-radius:8px;">
           <h3>Мешки</h3>
           <p>Размеры: 1170×950 мм (±10). Высокая прочность и влагозащита.</p>
         </div>
         <div class="card">
+          <img src="images/product2.jpg" alt="Упаковочная бумага" style="width:100%; border-radius:8px;">
           <h3>Упаковочная бумага</h3>
           <p>Листы и рулоны разных форматов. Подходит для печати и упаковки.</p>
         </div>
         <div class="card">
+          <img src="images/product3.jpg" alt="Листы" style="width:100%; border-radius:8px;">
           <h3>Листы</h3>
           <p>Форматы A4, A3 и по заказу. Гладкая поверхность, устойчивая к разрыву.</p>
         </div>
@@ -78,7 +82,9 @@
   <section id="certs" class="section gray">
     <div class="container">
       <h2>Сертификаты</h2>
-      <p>Продукция сертифицирована для использования в пищевой и промышленной сферах. Доступны сертификаты качества и безопасности по запросу.</p>
+      <img src="images/cert1.jpg" alt="Сертификат 1" style="width:150px; margin:0.5rem;">
+      <img src="images/cert2.jpg" alt="Сертификат 2" style="width:150px; margin:0.5rem;">
+      <p>Продукция сертифицирована для использования в пищевой и промышленной сферах.</p>
     </div>
   </section>
 
@@ -96,10 +102,6 @@
       <details>
         <summary>Есть ли доставка в Россию и Европу?</summary>
         <p>Да, организуем доставку в РФ и ЕС.</p>
-      </details>
-      <details>
-        <summary>Какие минимальные объемы заказа?</summary>
-        <p>Обсуждается индивидуально, начиная от 1 паллеты.</p>
       </details>
     </div>
   </section>
